<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/btwoo"
    android:padding="16dp"
    android:gravity="center"
    tools:context=".Contact">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="-50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/round_background"
            android:padding="15dp"
            android:src="@drawable/contact"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/name"
                android:textSize="20sp"
                android:fontFamily="@font/opensans"
                android:inputType="textNoSuggestions"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:maxLines="1"
                android:singleLine="true"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/prompt_email"
                android:textSize="20sp"
                android:fontFamily="@font/opensans"
                android:inputType="textEmailAddress"
                android:background="@android:color/transparent"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintAnimationEnabled="true"
            android:textColorHint="@color/black"
            app:hintTextColor="@color/black"
            app:boxStrokeColor="@color/black">

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/message"
                android:textSize="20sp"
                android:fontFamily="@font/opensans"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:maxLines="20"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_rounded"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout>

